paginas en el cliente y en el servidor

--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/App.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/App.razor
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-    <Router AppAssembly="typeof(Program).Assembly">
+    <Router AppAssembly="typeof(App).Assembly">
         <Found Context="routeData">
-            <RouteView RouteData="routeData" DefaultLayout="typeof(PasoParametrosBlazor.Client.Layout.MainLayout)" />
+            <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
             <FocusOnNavigate RouteData="routeData" Selector="h1" />
         </Found>
         <NotFound>
