--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Layout/NavMenu.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Layout/NavMenu.razor
@@ -31,6 +31,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Modal_Modifica
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="modalModificaParametroServer">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Modal_Modifica_Server
+            </NavLink>
+        </div>
     </nav>
 </div>
 
