--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/Modal.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/Modal.razor
@@ -1,5 +1,6 @@
 ﻿@page "/modal"
 @using PasoParametrosBlazor.Client.Components
+@rendermode InteractiveWebAssembly
 
 <button @onclick="MostrarModal">Mostrar modal</button>
 
