--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/ModalParametroCascada.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/ModalParametroCascada.razor
@@ -1,4 +1,4 @@
-﻿@page "/modalParametro"
+﻿@page "/modalParametroCascada"
 @using PasoParametrosBlazor.Client.Components
 @rendermode InteractiveWebAssembly
 
