--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor/Components/Pages/ModalModificaParametroServer.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor/Components/Pages/ModalModificaParametroServer.razor
@@ -1,6 +1,6 @@
-﻿@page "/modalModificaParametro"
+﻿@page "/modalModificaParametroServer"
+@rendermode InteractiveServer
 @using PasoParametrosBlazor.Client.Components
-@rendermode InteractiveWebAssembly
 
 <button @onclick="MostrarModal">Mostrar modal Modifica Parametro</button>
 <input @bind="dato" />
