--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor/Components/_Imports.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor/Components/_Imports.razor
@@ -9,3 +9,5 @@
 @using PasoParametrosBlazor
 @using PasoParametrosBlazor.Client
 @using PasoParametrosBlazor.Components
+@using Blazored.LocalStorage;
+@using LibreriaCompartida;
