--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/_Imports.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using PasoParametrosBlazor.Client
+@using Blazored.LocalStorage;
+@using LibreriaCompartida;
