--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor/Components/Pages/ModalModificaParametroServer.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor/Components/Pages/ModalModificaParametroServer.razor
@@ -2,7 +2,7 @@
 @rendermode InteractiveServer
 @using PasoParametrosBlazor.Client.Components
 @inject Blazored.LocalStorage.ILocalStorageService LocalStorage
-@inject LocalStorageSyncService SyncService
+
 
 
 <button @onclick="MostrarModal">Mostrar modal Modifica Parametro</button>
@@ -14,7 +14,7 @@
 }
 
 @code {
-    string dato = "Texto inicial";
+    string dato = "";
     bool modalVisible = false;
 
 
@@ -22,8 +22,7 @@
     {
         if (firstRender)
         {
-            dato = await LocalStorage.GetItemAsync<string>("valor-compartido") ?? "Texto inicial";
-            SyncService.OnValorChanged += ActualizarValor;
+            dato = await LocalStorage.GetItemAsync<string>("valor-compartido") ?? dato;
             StateHasChanged();
         }
     }
@@ -38,16 +37,5 @@
         await LocalStorage.SetItemAsync("valor-compartido", dato);
     }
 
-    void ActualizarValor()
-    {
-        InvokeAsync(async () =>
-        {
-            dato = await LocalStorage.GetItemAsync<string>("valor-compartido") ?? dato;
-            StateHasChanged();
-        });
-    }
-    public void Dispose()
-    {
-        SyncService.OnValorChanged -= ActualizarValor;
-    }
+
 }
