funionando con AppState

--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/ModalModificaParametro.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/ModalModificaParametro.razor
@@ -4,11 +4,10 @@
 
 @using PasoParametrosBlazor.Client.Components
 @inject Blazored.LocalStorage.ILocalStorageService LocalStorage
-
-
+@inject AppState State
 
 <button @onclick="MostrarModal">Mostrar modal Modifica Parametro</button>
-<input @bind="dato" />
+<input @bind=dato @oninput="GuardarAppState" />
 
 @if (modalVisible)
 {
@@ -19,25 +18,43 @@
     string dato = "";
     bool modalVisible = false;
 
+    protected override void OnInitialized()
+    {
+        dato = State.ValorCompartido;
+    }
+
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (firstRender)
         {
-            dato = await LocalStorage.GetItemAsync<string>("valor-compartido") ?? dato;
+            var valorGuardado = await LocalStorage.GetItemAsync<string>("valor-compartido") ?? dato;
+            if (valorGuardado != dato)
+            {
+                dato = valorGuardado;
+                StateHasChanged();
+            }
 
-            StateHasChanged();
+
         }
     }
-
 
     void MostrarModal() => modalVisible = true;
     void CerrarModal() => modalVisible = false;
 
-     async Task ActualizarDato(string nuevoValor) 
+    async Task ActualizarDato(string nuevoValor)
     {
         dato = nuevoValor;
         await LocalStorage.SetItemAsync("valor-compartido", dato);
+        State.ValorCompartido = dato;
     }
+
+    async Task GuardarAppState(ChangeEventArgs e)
+    {
+        var texto = e.Value?.ToString() ?? "";
+        State.ValorCompartido = texto;
+
+    }
+
 
 }
