--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/ModalModificaParametro.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/ModalModificaParametro.razor
@@ -1,6 +1,6 @@
 ﻿@page "/modalModificaParametro"
 @using PasoParametrosBlazor.Client.Components
-@rendermode InteractiveWebAssembly
+@rendermode InteractiveAuto
 
 @using PasoParametrosBlazor.Client.Components
 @inject Blazored.LocalStorage.ILocalStorageService LocalStorage
