--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Components/MiModalParametroCascada.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Components/MiModalParametroCascada.razor
@@ -8,22 +8,34 @@
             </div>
             <div class="modal-body">
                 <p>Contenido o dato: @ValorAMostrar</p>
+                <p>Indice: @IndiceMostrar</p>
                 <input type="text" class="form-control" @bind=@ValorAMostrar placeholder="Escribe aquí..." />
 
-                
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" @onclick="OnCerrar">Cerrar</button>
-                <button class="btn btn-primary" @onclick="Guardar">Guardar y cerrar</button>
+                @if (Ultimo)
+                {
+                    <button class="btn btn-primary" @onclick="Guardar">Final y cerrar</button>
+                }
+                else
+                {
+                    <button class="btn btn-primary" @onclick="Guardar">Guardar y cerrar</button>
+                }
             </div>
         </div>
     </div>
 </div>
 
 @code {
-    [Parameter] public string ValorAMostrar { get; set; }
-    [Parameter] public Action OnCerrar { get; set; }
+    [CascadingParameter(Name = "ValorEntrada")] public string ValorAMostrar { get; set; }
+    [CascadingParameter(Name = "CallBack")] public Action OnCerrar { get; set; }
+    [CascadingParameter(Name = "Indice")] public int IndiceMostrar { get; set; }
+
     [Parameter] public EventCallback<string> ValorEditadoChanged { get; set; }
+    [Parameter] public bool Ultimo { get; set; }
+
 
     async Task Guardar()
     {
