--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Layout/NavMenu.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Layout/NavMenu.razor
@@ -36,6 +36,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Modal_Modifica_Server
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="modalParametroCascada">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Modal_Cascada_Cliente
+            </NavLink>
+        </div>
     </nav>
 </div>
 
