--- a/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/ModalParametroCascada.razor
+++ b/PasoParametrosBlazor/PasoParametrosBlazor/PasoParametrosBlazor.Client/Pages/ModalParametroCascada.razor
@@ -33,21 +33,21 @@
 }
 
 @code {
-    string dato = "Inicial";
+    ClaseDato dato = new ClaseDato();
     bool modalVisible = false;
     int inx = 0;
 
-    async Task ActualizarDato1(string nuevoValor)
+    async Task ActualizarDato1(ClaseDato nuevoValor)
     {
-        dato = nuevoValor;
+        dato.Valor1 = nuevoValor.Valor1;
     }
-    async Task ActualizarDato2(string nuevoValor)
+    async Task ActualizarDato2(ClaseDato nuevoValor)
     {
-        dato = nuevoValor;
+        dato.Valor2 = nuevoValor.Valor2;
     }
-    async Task ActualizarDato3(string nuevoValor)
+    async Task ActualizarDato3(ClaseDato nuevoValor)
     {
-        dato = nuevoValor;
+        dato.Valor3 = nuevoValor.Valor3;
     }
 
     void MostrarModal() 
@@ -64,6 +64,13 @@
     {
         inx = 0;
         modalVisible = false;
+    }
+
+    public class ClaseDato
+    {
+        public string Valor1 { get; set; }
+        public string Valor2 { get; set; }
+        public string Valor3 { get; set; }
     }
 }
 
